# microservice-architecture/restful-broker-service/docs/swagger.json
@@ -37,13 +37,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/main.Response"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.Response"
                         }
                     }
                 }
@@ -71,6 +77,17 @@
                 }
             }
         },
+        "main.Identifier": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "number"
+                }
+            }
+        },
         "main.Log": {
             "type": "object",
             "properties": {
@@ -78,6 +95,23 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.Plc": {
+            "type": "object",
+            "properties": {
+                "identifier": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.Identifier"
+                    }
+                },
+                "machine": {
+                    "type": "string"
+                },
+                "time": {
                     "type": "string"
                 }
             }
@@ -101,6 +135,26 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/main.CreateStatesInput"
+                    }
+                }
+            }
+        },
+        "main.Response": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "plcs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.Plc"
+                    }
+                },
+                "states": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.State"
                     }
                 }
             }
